adding render files in app.properties

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -440,6 +440,7 @@ body {
                 <a href="#" class="btn btn-warning btn-block">Manage Products</a>
             </div>
         </div>
+    </div>
 
 </main>
 </body>
