--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
 <section class="hero">
     <h1>Your One-Stop Shop for Every Furniture Need!</h1>
 
-        <button class="button-85" th:onclick="'window.location.href=\'/e-showroom\''">Visit Our e-Showroom</button>
+        <button class="button-52" th:onclick="'window.location.href=\'/e-showroom\''">Visit Our e-Showroom</button>
 
 </section>
 
@@ -100,7 +100,7 @@
     <div class="testimonial-container">
         <div class="testimonial-card">
             <div class="testimonial-image">
-                <img src="/img/client1.jpg" alt="Client 1" />
+                <img src="/img/kuwa.jpg" alt="Client 1" />
             </div>
             <div class="testimonial-content">
                 <p class="quote">"The furniture design service completely transformed my living room! I couldn't be happier with the results."</p>
@@ -110,7 +110,7 @@
         </div>
         <div class="testimonial-card">
             <div class="testimonial-image">
-                <img src="/img/client2.jpg" alt="Client 2" />
+                <img src="/img/sam.jpg" alt="Client 2" />
             </div>
             <div class="testimonial-content">
                 <p class="quote">"Custom furniture that fits my style perfectly! The team was professional and attentive to my needs."</p>
@@ -120,7 +120,7 @@
         </div>
         <div class="testimonial-card">
             <div class="testimonial-image">
-                <img src="/img/client3.jpg" alt="Client 3" />
+                <img src="/img/dudu.jpg" alt="Client 3" />
             </div>
             <div class="testimonial-content">
                 <p class="quote">"I love my new sofa! The upholstery service was top-notch, and the quality is outstanding."</p>
@@ -171,10 +171,10 @@
             <p><strong>Address:</strong> KG 309 ST, Gisozi, Kigali</p>
         </div>
 
-        <div class="btn-group">
-            <button class="btn-filled-dark">Contact Us</button>
-            <button class="btn-outline-dark btn-hover-color">Leave Feedback</button>
-        </div>
+<!--        <div class="btn-group">-->
+<!--            <button class="btn-filled-dark">Contact Us</button>-->
+<!--            <button class="btn-outline-dark btn-hover-color">Leave Feedback</button>-->
+<!--        </div>-->
     </div>
 </section>
 
