--- a/src/main/resources/templates/seller.html
+++ b/src/main/resources/templates/seller.html
@@ -122,11 +122,11 @@
     </div>
 
 
-    <a th:href="@{/sellerPage(lang='en')}">English</a>
-    <a th:href="@{/sellerPage(lang='fr')}">Français</a>
+    <a th:href="@{/sellerPage}">English</a>
+    <a th:href="@{/sellerPage}">Français</a>
 
-    <h1 th:text="#{page.title}"></h1>
-    <h3 th:text="#{notifications.header}"></h3>
+<!--    <h1 th:text="#{page.title}"></h1>-->
+<!--    <h3 th:text="#{notifications.header}"></h3>-->
 
 
 
