--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,97 +1,97 @@
+<!--&lt;!&ndash;<!DOCTYPE html>&ndash;&gt;-->
+<!--&lt;!&ndash;<html xmlns:th="http://www.thymeleaf.org" lang="en">&ndash;&gt;-->
+<!--&lt;!&ndash;<head>&ndash;&gt;-->
+<!--&lt;!&ndash;    <meta charset="UTF-8">&ndash;&gt;-->
+<!--&lt;!&ndash;    <meta name="viewport" content="width=device-width, initial-scale=1.0">&ndash;&gt;-->
+<!--&lt;!&ndash;    <title>Login</title>&ndash;&gt;-->
+<!--&lt;!&ndash;</head>&ndash;&gt;-->
+<!--&lt;!&ndash;<body>&ndash;&gt;-->
+<!--&lt;!&ndash;<h1>Login</h1>&ndash;&gt;-->
+<!--&lt;!&ndash;<div>&ndash;&gt;-->
+<!--&lt;!&ndash;    <p th:text="${message}"></p>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--&lt;!&ndash;<form action="#" th:action="@{/login}" method="post">&ndash;&gt;-->
+<!--&lt;!&ndash;    <input type="text" name="username" placeholder="Username" required>&ndash;&gt;-->
+<!--&lt;!&ndash;    <input type="password" name="password" placeholder="Password" required>&ndash;&gt;-->
+<!--&lt;!&ndash;    <button type="submit">Login</button>&ndash;&gt;-->
+<!--&lt;!&ndash;</form>&ndash;&gt;-->
+<!--&lt;!&ndash;<p th:text="${error}"></p>&ndash;&gt;-->
+<!--&lt;!&ndash;<p><a th:href="@{/register}">Don't have an account? Register here</a></p>&ndash;&gt;-->
+<!--&lt;!&ndash;<p th:if="${param.logout}" style="color:green;">You have been logged out successfully.</p>&ndash;&gt;-->
+<!--&lt;!&ndash;<p><a th:href="@{/forgot-password}">Forgot Password?</a></p>&ndash;&gt;-->
+<!--&lt;!&ndash;</body>&ndash;&gt;-->
+<!--&lt;!&ndash;</html>&ndash;&gt;-->
+
 <!--<!DOCTYPE html>-->
 <!--<html xmlns:th="http://www.thymeleaf.org" lang="en">-->
 <!--<head>-->
 <!--    <meta charset="UTF-8">-->
 <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-<!--    <title>Login</title>-->
+<!--    <title>LW furniture|Login</title>-->
+<!--    <link rel="stylesheet" th:href="@{/css/logreg-styles.css}" />-->
 <!--</head>-->
 <!--<body>-->
-<!--<h1>Login</h1>-->
-<!--<div>-->
-<!--    <p th:text="${message}"></p>-->
-<!--</div>-->
-<!--<form action="#" th:action="@{/login}" method="post">-->
-<!--    <input type="text" name="username" placeholder="Username" required>-->
-<!--    <input type="password" name="password" placeholder="Password" required>-->
-<!--    <button type="submit">Login</button>-->
-<!--</form>-->
-<!--<p th:text="${error}"></p>-->
-<!--<p><a th:href="@{/register}">Don't have an account? Register here</a></p>-->
-<!--<p th:if="${param.logout}" style="color:green;">You have been logged out successfully.</p>-->
-<!--<p><a th:href="@{/forgot-password}">Forgot Password?</a></p>-->
+<!--<header>-->
+<!--    <div class="banner">Get free delivery on orders over $80</div>-->
+<!--    <nav>-->
+<!--        <div id="logo">Light of the World <br /> Furniture</div>-->
+<!--        <ul class="navigation-menu">-->
+<!--            <li><a th:href="@{/home}">Home</a></li>-->
+<!--            <li><a href="#products">Products</a></li>-->
+<!--            <li><a href="#about-us">About us</a></li>-->
+<!--            <li><a href="#contact-info">Contact</a></li>-->
+<!--        </ul>-->
+<!--        <div id="utility">-->
+<!--            <button class="button-86" th:onclick="'window.location.href=\'/login\''">Login</button>-->
+<!--            <button class="button-86" th:onclick="'window.location.href=\'/register\''">Get Started</button>-->
+<!--        </div>-->
+<!--    </nav>-->
+<!--</header>-->
+<!--<section class="login-section">-->
+<!--    <div class="login-form-container">-->
+<!--        <h1>Login</h1>-->
+<!--        <form action="#" th:action="@{/login}" method="post">-->
+<!--            <input type="text" name="username" placeholder="Username" required>-->
+<!--            <input type="password" name="password" placeholder="Password" required>-->
+<!--            <button type="submit">Login</button>-->
+
+<!--            <div class="login-links">-->
+<!--                <p><a th:href="@{/register}">Don't have an account? Register Here</a></p>-->
+<!--                <p><a th:href="@{/forgot-password}">Forgot Password?</a></p>-->
+<!--            </div>-->
+<!--        </form>-->
+<!--        &lt;!&ndash; Display error message if it exists &ndash;&gt;-->
+<!--        <p th:if="${error}" style="color:red; text-align:center; " th:text="${error}"></p>-->
+
+
+<!--        <p th:if="${param.logout}" class="logout-message">You have been logged out successfully.</p>-->
+<!--    </div>-->
+<!--    <div class="login-info-container">-->
+<!--        <div class="motivational-text"><h2 class="logo-name">Light of the World Furniture</h2>-->
+<!--            <p class="logo-name"> Furniture that Shines | Furniture that Inspires</p>-->
+<!--        </div>-->
+<!--        <div class="motivational-text">-->
+<!--            <h2>Welcome Back to Your Dream Space!</h2>-->
+<!--            <p>Log in to unlock exclusive access to our latest furniture collections and special deals.</p>-->
+<!--            <p>Transform your home with our unique designs and elevate your living experience!</p>-->
+<!--        </div>-->
+
+<!--    </div>-->
+<!--</section>-->
+<!--&lt;!&ndash; Footer &ndash;&gt;-->
+
+<!--<footer class="footer">-->
+<!--    <p class="footer__text">-->
+<!--        Created by-->
+<!--        <a-->
+<!--                href="https://www.linkedin.com/in/ashimwe-cedrick"-->
+<!--                target="_blank"-->
+<!--                rel="noopener"-->
+<!--        >-->
+<!--            Ashimwe Rushinga Cedrick-->
+<!--        </a>-->
+<!--        &copy; 2024 Your Furniture Company-->
+<!--    </p>-->
+<!--</footer>-->
 <!--</body>-->
 <!--</html>-->
-
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LW furniture|Login</title>
-    <link rel="stylesheet" th:href="@{/css/logreg-styles.css}" />
-</head>
-<body>
-<header>
-    <div class="banner">Get free delivery on orders over $80</div>
-    <nav>
-        <div id="logo">Light of the World <br /> Furniture</div>
-        <ul class="navigation-menu">
-            <li><a th:href="@{/home}">Home</a></li>
-            <li><a href="#products">Products</a></li>
-            <li><a href="#about-us">About us</a></li>
-            <li><a href="#contact-info">Contact</a></li>
-        </ul>
-        <div id="utility">
-            <button class="button-86" th:onclick="'window.location.href=\'/login\''">Login</button>
-            <button class="button-86" th:onclick="'window.location.href=\'/register\''">Get Started</button>
-        </div>
-    </nav>
-</header>
-<section class="login-section">
-    <div class="login-form-container">
-        <h1>Login</h1>
-        <form action="#" th:action="@{/login}" method="post">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-
-            <div class="login-links">
-                <p><a th:href="@{/register}">Don't have an account? Register Here</a></p>
-                <p><a th:href="@{/forgot-password}">Forgot Password?</a></p>
-            </div>
-        </form>
-        <!-- Display error message if it exists -->
-        <p th:if="${error}" style="color:red; text-align:center; " th:text="${error}"></p>
-
-
-        <p th:if="${param.logout}" class="logout-message">You have been logged out successfully.</p>
-    </div>
-    <div class="login-info-container">
-        <div class="motivational-text"><h2 class="logo-name">Light of the World Furniture</h2>
-            <p class="logo-name"> Furniture that Shines | Furniture that Inspires</p>
-        </div>
-        <div class="motivational-text">
-            <h2>Welcome Back to Your Dream Space!</h2>
-            <p>Log in to unlock exclusive access to our latest furniture collections and special deals.</p>
-            <p>Transform your home with our unique designs and elevate your living experience!</p>
-        </div>
-
-    </div>
-</section>
-<!-- Footer -->
-
-<footer class="footer">
-    <p class="footer__text">
-        Created by
-        <a
-                href="https://www.linkedin.com/in/ashimwe-cedrick"
-                target="_blank"
-                rel="noopener"
-        >
-            Ashimwe Rushinga Cedrick
-        </a>
-        &copy; 2024 Your Furniture Company
-    </p>
-</footer>
-</body>
-</html>
